# rgbar

./: .gitmodules  Cargo.toml  README.org
config/: style.css
res/: style.css
src/: application.rs  config.rs  constants.rs  macros.rs  main.rs  prelude.rs  statusbar.rs  window.rs
src/blocks/: cpu.rs  hyprstatus.rs  manager.rs  memory.rs  mod.rs  netspeed.rs  temp.rs  time.rs
src/blocks/audio/: mod.rs  pulse.rs
src/blocks/battery/: batdiff.rs  common.rs  ideapad.rs  mod.rs
src/blocks/hyprstatus/: hyprclients.rs  hyprevents.rs  mod.rs
src/blocks/netspeed/: mod.rs
src/blocks/time/: mod.rs
src/blocks/wayland/: backend.rs  mod.rs  window_widget.rs  workspace_canvas.rs  workspace_widget.rs
src/datahodler/: channel.rs  mod.rs  ring.rs
src/util/: gdk_util.rs  gtk_icon_loader.rs  mod.rs  timeutil.rs
src/utils/: channel_utils.rs  fileutils.rs  gtk_icon_loader.rs  gtkiconloader.rs  mod.rs
src/widgets/: chart.rs  mod.rs
