[package]
name = "rgbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.3.0"
tracing = "0.1.37"

regex = "1"
chrono = "0.4"
serde_json = "1.0.96"

gtk-layer-shell = "0.8.0"
glib = "0.18.5"
gdk-pixbuf = "0.18.5"
gio = "0.18.4"
gtk = "0.18.1"
gdk = "0.18.0"

anyhow = "*"

wireplumber = "*"

async-broadcast = "*"
async-channel = "2.1.1"

human_bytes = "*"
chinese-lunisolar-calendar = "0.2.0"
log = "0.4.20"
lazy_static = "1.4.0"
fragile = "2.0.0"

once_cell = "1.19.0"
nix = { version = "0.27", features = ["fs", "process"] }

pulse = { version = "2.0", package = "libpulse-binding" }

libc = "0.2.153"
smart-default = "0.7.1"

glob = "0.3.1"

[profile.release]
lto = "thin"

[profile.release-debug-info]
inherits = "release"
debug = true