[package]
name = "rgbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# TODO: https://github.com/aeghn/chin-tools
chin-tools = { path = "/home/chin/Projects/chin-tools", features = ["wayland-niri"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.4.0"
tracing = "0.1.37"

regex = "1"
chrono = "0.4"
serde_json = "1.0.96"

gtk-layer-shell = "0.8.0"
glib = "0.20.4"
gdk-pixbuf = "0.20.4"
gio = "0.20.4"
gtk = "0.18.1"
gdk = "0.18.0"
gdk-sys = "0.18.0"

anyhow = "1.0.91"

wireplumber = "*"

async-broadcast = "0.7.1"
async-channel = "2.1.1"

human_bytes = "0.4.3"
chinese-lunisolar-calendar = { version = "0.2.0", optional = true }

once_cell = "1.19.0"
nix = { version = "0.29.0", features = ["fs", "process"] }

pulse = { version = "2.0", package = "libpulse-binding" }

libc = "0.2.161"

glob = "0.3.1"
smart-default = "0.7.1"

[profile.release]
lto = "thin"

[profile.release-debug-info]
inherits = "release"
debug = true


[features]
ideapad = []
chinese = ["chinese-lunisolar-calendar"]
hyprland = []
