[package]
name = "rgbar"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chin-tools = { git = "https://github.com/aeghn/chin-tools", features = [
    "wayland-niri",
] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing-tree = "0.4.0"
tracing = "0.1.37"

regex = "1"
chrono = "0.4"
serde_json = "1.0.96"

gtk-layer-shell = "0.8.2"
glib = "0.20.0"
gio = "0.20.0"
gtk = "0.18.2"
gdk = "0.18.2"
gdk-sys = "0.18.2"
cairo-rs = "0.20.7"
librsvg = "2.59.2"

anyhow = "1.0.91"

wireplumber = "*"

async-broadcast = "0.7.1"
async-channel = "2.1.1"

human_bytes = "0.4.3"
chinese-lunisolar-calendar = { version = "0.2.0", optional = true }

once_cell = "1.19.0"
nix = { version = "0.29.0", features = ["fs", "process"] }

pulse = { version = "2.0", package = "libpulse-binding" }

libc = "0.2.161"

glob = "0.3.1"
smart-default = "0.7.1"
clap = "4.5.29"
serde = { version = "1.0.217", features = ["serde_derive"] }
lazy_static = "1.5.0"
arc-swap = "1.7.1"
smol_str = "0.3.2"


[profile.release]
lto = "thin"

[profile.release-debug-info]
inherits = "release"
debug = true


[features]
default = []
ideapad = []
chinese = ["chinese-lunisolar-calendar"]
hyprland = []
